# spaila-parser

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  reset_learning.py  workspace_paths.py
app/electron/: main.js  preload.js  previewText.js  workspacePaths.js
app/ui/: index.html  index.jsx
apps/desktop/: README.md
apps/web/: README.md  index.html
backend/: README.md  date_search.py  db.py  main.py  orders.py
backend/api/: __init__.py
backend/scripts/: backfill_manifests.py
cloud-sync/: README.md
db_snapshots/: spaila-20260425-215518.db  spaila-20260426-153002.db
helper/: create_folders.py  sync_folders.py  test_create_folder.py  tray_app.py  tray_requirements.txt
parser/: cli.py  debug_integrity.py  debug_manual_assignment.py  decide.py  extract.py  ingest.py  models.py  order_number_safety.py  pipeline.py  regression_audit.py  sanitize.py  score.py  segment.py  structural_rules.py  ui_bridge.py
parser_certification/: __init__.py  cli.py  generator.py  isolation.py  manifest.py  runner.py  snapshots.py
scripts/: build-renderer.mjs  build-web.mjs  email_retention_migration.py  recover-inbox-visibility.mjs  watch-renderer.mjs
server/: __init__.py
shared/: README.md
tests/: dateSearch.test.mjs  date_search_test.py  test_account_auth_subscription.py  test_attachment_pipeline.py  test_documents_account_api.py  test_email_archive_retention.py  test_imap_client.py  test_inbox_merge.mjs  test_inbox_source_deleted_reconcile.py  test_mail_service.py  test_order_operational_save.py  test_trash_delete_flow.py
(+126 files in other folders)
